kube/project-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
  namespace: ${TARGET_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
      - name: project-service
        image: ${ECR_URL}/project-service:latest
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: ${TARGET_ENV}
spec:
  selector:
    app: project-service
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
