kube/task-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: ${ECR_URL}/task-service:latest
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: dev
spec:
  selector:
    app: task-service
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
