kube/user-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ${TARGET_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: ${ECR_URL}/user-service:latest
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ${TARGET_ENV}
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
