kube/taskflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskflow-ingress
  namespace: ${TARGET_ENV}
  annotations:
    # Switch to Nginx for SSL termination
    kubernetes.io/ingress.class: nginx
    # Automatically get certificates from cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Enable SSL Redirect
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - TaskFlow-${TARGET_ENV}.duckdns.org
    secretName: taskflow-tls-secret
  rules:
  - host: TaskFlow-${TARGET_ENV}.duckdns.org
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9999
      - path: /api/projects
        pathType: Prefix
        backend:
          service:
            name: project-service
            port:
              number: 9999
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 9999
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
